[package]
name = "mycli"
version = "0.1.0"
authors = ["noelzubin <noelzubinvictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.16.0"
structopt = "0.3.21"
dirs = "3.0.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
prettytable-rs = "^0.8"
colored = "2"
